// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card there is not snapshot when have a image 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flexDirection": "row",
      "height": 110,
      "marginBottom": 8,
      "marginLeft": 8,
      "marginRight": 8,
      "marginTop": 8,
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "height": "100%",
          "width": "25%",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "space-between",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#111",
            "fontSize": 12,
            "marginRight": 8,
            "textAlign": "right",
          },
        ]
      }
      testID="date"
    >
      01/20/1970
    </Text>
    <Text
      style={
        [
          {
            "color": "#111",
            "fontSize": 18,
            "fontWeight": "bold",
          },
        ]
      }
    >
      any_title
    </Text>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": "95%",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#111",
              "fontSize": 12,
            },
          ]
        }
      >
        t2_63val2uo
      </Text>
      <Text
        style={
          [
            {
              "color": "#111",
              "fontSize": 12,
            },
          ]
        }
      >
        Score: 
        44889
      </Text>
      <Text
        style={
          [
            {
              "color": "#111",
              "fontSize": 12,
            },
          ]
        }
      >
        6
         comments
      </Text>
    </View>
  </View>
</View>
`;

exports[`Card there is snapshot when have a image 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flexDirection": "row",
      "height": 110,
      "marginBottom": 8,
      "marginLeft": 8,
      "marginRight": 8,
      "marginTop": 8,
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "height": "100%",
          "width": "25%",
        },
      ]
    }
  >
    <Image
      source={
        {
          "uri": "https://b.thumbs.redditmedia.com/Kcl7QHZgBChhHrGhue6f6VNXMFLtqiKpBYGODPFJnFU.jpg",
        }
      }
      style={
        [
          {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      testID="image"
    />
  </View>
  <View
    style={
      [
        {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "space-between",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#111",
            "fontSize": 12,
            "marginRight": 8,
            "textAlign": "right",
          },
        ]
      }
      testID="date"
    >
      01/20/1970
    </Text>
    <Text
      style={
        [
          {
            "color": "#111",
            "fontSize": 18,
            "fontWeight": "bold",
          },
        ]
      }
    >
      any_title
    </Text>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": "95%",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#111",
              "fontSize": 12,
            },
          ]
        }
      >
        t2_63val2uo
      </Text>
      <Text
        style={
          [
            {
              "color": "#111",
              "fontSize": 12,
            },
          ]
        }
      >
        Score: 
        44889
      </Text>
      <Text
        style={
          [
            {
              "color": "#111",
              "fontSize": 12,
            },
          ]
        }
      >
        6
         comments
      </Text>
    </View>
  </View>
</View>
`;
